feat: interfaz gráfica JavaFX + documentación v2.0
Interfaz gráfica:
- MainApp.java: punto de entrada JavaFX (1150x730)
- MainController.java: ventana principal con sidebar de navegación
- DashboardController.java: métricas del sistema en tarjetas
- UsuariosController.java: CRUD con TableView y badges de rol
- AccesosController.java: entrada/salida con retroalimentación inline
- ReportesController.java: historial con duración calculada
- EstilosUI.java: paleta de colores, estilos y alertas centralizados
- AccesoService: añadidos listarTodosLosAccesos() y contarDentroDelLaboratorio()

Documentación:
- README.md: actualizado para modo dual JavaFX/consola
- CHANGELOG.md: versión v2.0 documentada
- IA_USO.md: prompt 10 y ajustes JavaFX documentados

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>