@@ -1,19 +1,23 @@
 # Sistema de Control de Acceso a Laboratorio
 
-Aplicación de consola desarrollada en Java con arquitectura por capas.  
+Aplicación de escritorio desarrollada en Java con interfaz gráfica **JavaFX** y arquitectura por capas.  
 Gestiona el registro de usuarios y controla su acceso a un laboratorio mediante archivos `.txt` como sistema de persistencia.
 
 ---
 
 ## Descripción General
 
-El sistema automatiza el control de acceso a un laboratorio académico. Registra quién entra, quién sale y cuánto tiempo permanece cada usuario dentro de las instalaciones. Toda la información se almacena localmente en archivos de texto plano, sin necesidad de base de datos.
+El sistema automatiza el control de acceso a un laboratorio académico mediante una interfaz visual moderna. Registra quién entra, quién sale y cuánto tiempo permanece cada usuario dentro de las instalaciones. Toda la información se almacena localmente en archivos de texto plano, sin necesidad de base de datos.
+
+El proyecto cuenta con dos modos de ejecución:
+- **Interfaz gráfica (JavaFX)** — modo principal con dashboard, tablas, formularios y alertas visuales.
+- **Modo consola** — alternativa ligera sin dependencias adicionales.
 
 ---
 
 ## Objetivo del Sistema
 
-Desarrollar una aplicación de consola en Java que demuestre el uso correcto de la **arquitectura por capas**, aplicando principios de separación de responsabilidades, validación de reglas de negocio y persistencia de datos en archivos `.txt`.
+Desarrollar una aplicación de escritorio en Java que demuestre el uso correcto de la **arquitectura por capas**, aplicando principios de separación de responsabilidades, validación de reglas de negocio, persistencia de datos en archivos `.txt` e interfaz de usuario moderna con JavaFX.
 
 ---
 
@@ -21,8 +25,8 @@ Desarrollar una aplicación de consola en Java que demuestre el uso correcto de 
 
 ### Gestión de Usuarios
 - Registrar un nuevo usuario (ID, nombre, rol)
-- Consultar la lista completa de usuarios registrados
-- Eliminar un usuario por ID
+- Consultar la lista completa de usuarios en tabla interactiva
+- Eliminar un usuario por ID con confirmación visual
 - Validar que no existan IDs duplicados
 
 ### Registro de Accesos
@@ -31,9 +35,15 @@ Desarrollar una aplicación de consola en Java que demuestre el uso correcto de 
 - Bloquear doble entrada sin salida previa registrada
 - Bloquear salida si no existe una entrada activa
 
+### Dashboard
+- Mostrar total de usuarios registrados en tiempo real
+- Mostrar cuántos usuarios están actualmente dentro del laboratorio
+- Mostrar el total acumulado de accesos registrados
+
 ### Reportes
-- Consultar el historial completo de accesos por usuario
-- Calcular el tiempo total acumulado dentro del laboratorio
+- Consultar historial completo de accesos por usuario en tabla
+- Calcular tiempo total acumulado dentro del laboratorio
+- Ver duración individual de cada visita
 
 ---
 
@@ -42,10 +52,12 @@ Desarrollar una aplicación de consola en Java que demuestre el uso correcto de 
 | Tecnología | Uso |
 |------------|-----|
 | Java (JDK 17+) | Lenguaje de programación principal |
+| JavaFX | Interfaz gráfica de escritorio |
 | `BufferedReader` / `BufferedWriter` | Lectura y escritura en archivos `.txt` |
 | `java.time.LocalDateTime` | Registro de fecha y hora de entrada y salida |
 | `java.time.Duration` | Cálculo del tiempo dentro del laboratorio |
-| `Scanner` | Lectura de entrada del usuario en consola |
+| `java.time.format.DateTimeFormatter` | Formateo de fechas en la interfaz |
+| `Scanner` | Modo de ejecución alternativo por consola |
 
 ---
 
@@ -60,7 +72,7 @@ El proyecto sigue una **arquitectura estricta por capas**. Cada capa tiene una �
 | `Entidades` | `Usuario`, `Acceso`, `Rol` | Modelos de datos puros (POJOs). Sin lógica de negocio. |
 | `AccesoDatos` | `UsuarioData`, `AccesoData` | Lectura y escritura en archivos `.txt`. Sin validaciones. |
 | `LogicaNegocio` | `UsuarioService`, `AccesoService` | Validaciones y reglas del dominio. Coordina el acceso a datos. |
-| `Presentacion` | `Main` | Menú interactivo en consola. Solo usa `LogicaNegocio`. |
+| `Presentacion` | `MainApp`, `MainController`, `DashboardController`, `UsuariosController`, `AccesosController`, `ReportesController`, `EstilosUI` | Interfaz gráfica JavaFX. Solo usa `LogicaNegocio`. |
 
 > La capa `Presentacion` **no puede acceder directamente** a `AccesoDatos`.  
 > Toda comunicación pasa obligatoriamente por `LogicaNegocio`.
@@ -71,7 +83,7 @@ El proyecto sigue una **arquitectura estricta por capas**. Cada capa tiene una �
 
 ```mermaid
 flowchart TD
-    P["🖥️ Presentacion\nMain.java\n(Menú en consola)"]
+    P["🖥️ Presentacion — JavaFX\nMainApp · MainController\nDashboard · Usuarios · Accesos · Reportes\nEstilosUI"]
     LN["⚙️ LogicaNegocio\nUsuarioService · AccesoService\n(Validaciones y reglas)"]
     AD["💾 AccesoDatos\nUsuarioData · AccesoData\n(Lectura/escritura en .txt)"]
     E["📦 Entidades\nUsuario · Acceso · Rol\n(POJOs del dominio)"]
@@ -91,6 +103,19 @@ flowchart TD
 
 ---
 
+## Diseño Visual de la Interfaz
+
+| Elemento | Descripción |
+|----------|-------------|
+| Sidebar | Fondo `#0f2744` (azul oscuro) con navegación por secciones |
+| Tarjetas | Fondo blanco con sombra suave y bordes redondeados |
+| Badges | Verde = Estudiante / Activo · Azul = Docente · Gris = Completado |
+| Alertas | Diálogos con fondo blanco para errores y confirmaciones |
+| Tablas | `TableView` con columnas redimensionables y celda de acción |
+| Paleta | Azul `#3b82f6` · Verde `#10b981` · Rojo `#ef4444` · Ámbar `#f59e0b` |
+
+---
+
 ## Estructura de Carpetas
 
 ```
@@ -107,7 +132,16 @@ examen2Progra3/
 │   │   ├── UsuarioService.java
 │   │   └── AccesoService.java
 │   └── presentacion/
-│       └── Main.java
+│       ├── MainApp.java                  ← Punto de entrada JavaFX
+│       ├── Main.java                     ← Modo consola (alternativo)
+│       ├── util/
+│       │   └── EstilosUI.java            ← Paleta, estilos CSS y alertas
+│       └── controladores/
+│           ├── MainController.java       ← Ventana principal + sidebar
+│           ├── DashboardController.java  ← Panel de métricas
+│           ├── UsuariosController.java   ← CRUD de usuarios
+│           ├── AccesosController.java    ← Entrada y salida
+│           └── ReportesController.java  ← Historial y tiempo total
 ├── usuarios.txt
 ├── accesos.txt
 ├── IA_USO.md
@@ -165,26 +199,55 @@ U002,2026-04-07T09:00:00,null
 
 ### Requisitos Previos
 - **JDK 17** o superior instalado
+- **JavaFX SDK 17+** — descargable desde [openjfx.io](https://openjfx.io)
 - Terminal o símbolo del sistema
 
-### Pasos
+### Clonar el repositorio
 
-**1. Clonar el repositorio**
 ```bash
 git clone https://github.com/chepe5251/examen2Progra3.git
-cd examen2Progra3
+cd examen2Progra3/src
 ```
 
-**2. Compilar todas las clases**
+---
+
+### Modo 1 — Interfaz Gráfica JavaFX (recomendado)
+
+**Compilar:**
 ```bash
-cd src
-javac entidades/*.java accesodatos/*.java logicaNegocio/*.java presentacion/*.java
+javac --module-path /ruta/javafx/lib --add-modules javafx.controls \
+  entidades/*.java \
+  accesodatos/*.java \
+  logicaNegocio/*.java \
+  presentacion/util/*.java \
+  presentacion/controladores/*.java \
+  presentacion/MainApp.java
 ```
 
-**3. Ejecutar el programa**
+**Ejecutar:**
+```bash
+java --module-path /ruta/javafx/lib --add-modules javafx.controls \
+  presentacion.MainApp
+```
+
+> Reemplaza `/ruta/javafx/lib` con la ruta real donde descargaste el SDK de JavaFX.  
+> Ejemplo Windows: `C:\javafx-sdk-21\lib`
+
+---
+
+### Modo 2 — Consola (sin JavaFX)
+
+**Compilar:**
+```bash
+javac entidades/*.java accesodatos/*.java logicaNegocio/*.java presentacion/Main.java
+```
+
+**Ejecutar:**
 ```bash
 java presentacion.Main
 ```
+
+---
 
 > Los archivos `usuarios.txt` y `accesos.txt` se generan automáticamente dentro del directorio `src/` al guardar datos por primera vez.
 
@@ -204,6 +267,8 @@ java presentacion.Main
 ## Notas
 
 - Los archivos `usuarios.txt` y `accesos.txt` deben estar en el mismo directorio desde donde se ejecuta el programa.
-- El sistema fue desarrollado y probado con Java 17 en terminal de Windows.
+- El sistema fue desarrollado y probado con Java 17 en Windows.
 - Para limpiar los datos de prueba, basta con vaciar o eliminar los archivos `usuarios.txt` y `accesos.txt`.
-- Se incluye el archivo `IA_USO.md` con la documentación del uso de inteligencia artificial durante el desarrollo del proyecto.
+- `Main.java` (consola) se conserva como alternativa sin dependencias externas.
+- Se incluye el archivo `IA_USO.md` con la documentación del uso de inteligencia artificial durante el desarrollo.
+- Se incluye el archivo `CHANGELOG.md` con el historial de versiones del proyecto.
